@@ -4,7 +4,8 @@ Changelog
 2.1.1 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Remove "@@" from simplelayout-view because it is not needed.
+  [raphael-s]
 
 
 2.1.0 (2016-07-20)
